# simple-pointer-analysis

./: .gitignore  Anderson.h  CMakeLists.txt  ConstraintCollect.cpp  ConstraintSolve.cpp  LLVMAssignment.cpp  Main.cpp  NodeFactory.cpp  NodeFactory.h  compile.sh  note.md  readme.md  run.sh
include/: Anderson.h  AndersonSolver.h  NodeFactory.h  PointerAnalysis.h  SteensgardSolver.h  UnionSet.h
lib/: AndersonSolver.cpp  ConstraintCollect.cpp  ConstraintSolve.cpp  Main.cpp  NodeFactory.cpp  PointerAnalysis.cpp  SteensgardSolver.cpp
sample-output/: ptg.dot
sh/: grade.sh
test/: test00.c  test01.c  test02.c  test03.c  test04.c  test05.c
